bynkc/tests/fixtures/negative/484_messages_incomplete/src/bundle.bynk
commons bundle

uses bynk.locale

messages en @reference {
  "greeting" => "Hello"
  "farewell" => "Bye"
}

messages fr {
  "greeting" => "Bonjour"
}
